--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "audio_decoder_wasm"
 edition = "2021"
+version = "0.1.0"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-hound = "3.4"
+js-sys = "0.3"
+symphonia = "0.5.4"
