--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2"
 js-sys = "0.3"
-symphonia = "0.5.4"
+symphonia = { version = "0.5.4", features = ["mp3"] }
